--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <!--Program Purpose: This is my PVCC index.html file with links to all my HTML programs-->
 
   <head>
+    <img src="banner 2.png" alt="Sarah Knipp Banner"
+    
     <title> sknipp-pvcc </title>
   </head>
+  
   <body>
   
     <h1> Sarah Knipp</h1>
