--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!--Program Purpose: This is my PVCC index.html file with links to all my HTML programs-->
 
   <head>
-    <img src="banner 2.png" alt="Sarah Knipp Banner"
+    <img src="banner 2.png" alt="Sarah Knipp Banner">
     
     <title> sknipp-pvcc </title>
   </head>
