--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang = "en">
 <!-- Name: Sarah Knipp-->
 <!--Program Purpose: This is my PVCC index.html file with links to all my HTML programs-->
-
+<center>
   <head>
-    <img src="banner 2.png" alt="Sarah Knipp Banner">
+    <img src="banner 2.png" alt="Sarah Knipp Banner" align="center">
     
  
   </head>
@@ -21,4 +21,5 @@
       <li>more here...</li>
     </ul>
   </body>
+  </center>
 </html>
