--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang = "en">
 <!-- Name: Sarah Knipp-->
 <!--Program Purpose: This is my PVCC index.html file with links to all my HTML programs-->
+
+
+
+
+<body style="background-color:#FFFFFF;">
+
 <center>
   <head>
     <img src="banner 2.png" alt="Sarah Knipp Banner" align="center">
@@ -13,13 +19,47 @@
   
     <h1> Sarah Knipp</h1>
     <h2>CSC 110 Web Pages</h2>
-    <ul>
-      <li><a href = "faves.html"> My Favorite Things </a></li>
-      <li><a href = "bagels.html"> Brownsville Bagels </a></li>
-      <li>more here...</li>
-      <li>more here...</li>
-      <li>more here...</li>
-    </ul>
+	
+	<Table
+		border="1"
+		cellpadding="30">
+	
+	<tr>
+	
+		<th><h3>HTML</h3></th>
+		<th><h3>Python</h3></th>
+		<th><h3>Other Code</h3></th>
+		<th><h3>Other Code</h3></th>
+	</tr>
+	<tr>
+		<td> <li><a href = "faves.html"> My Favorite Things </a></li></td>
+		<td>More Here...</td>
+		<td>More Here...</td>
+		<td>More Here...</td>
+	</tr>
+	<tr>
+		<td><li><a href = "bagels.html"> Brownsville Bagels </a></li></td>
+		<td><<!--Put yo python project here--></td>
+		<td><!--Put yo whatever project here--></td>
+		<td><!--Put yo whatever project here--></td>
+	<tr></tr>
+		<td><!--Put yo html project here--></td>
+		<td><<!--Put yo python project here--></td>
+		<td><!--Put yo whatever project here--></td>
+		<td><!--Put yo whatever project here--></td>
+	<tr></tr>
+		<td><!--Put yo html project here--></td>
+<td><<!--Put yo python project here--></td>
+		<td><!--Put yo whatever project here--></td>
+		<td><!--Put yo whatever project here--></td>
+		
+		
+		
+		
+		
+	</tr>
+	</Table>
+	</center>
   </body>
-  </center>
+  
 </html>
