--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
 	</tr>
 	<tr>
 		<td><li><a href = "bagels.html"> Brownsville Bagels </a></li></td>
-		<td><<!--Put yo python project here--></td>
+		<td><!--Put yo python project here--></td>
 		<td><!--Put yo whatever project here--></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><!--Put yo html project here--></td>
-		<td><<!--Put yo python project here--></td>
+		<td><!--Put yo python project here--></td>
 		<td><!--Put yo whatever project here--></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><!--Put yo html project here--></td>
-<td><<!--Put yo python project here--></td>
+		<td><!--Put yo python project here--></td>
 		<td><!--Put yo whatever project here--></td>
 		<td><!--Put yo whatever project here--></td>
 		
