--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<td><!--Put yo whatever project here--></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
-		<td><!--Put yo html project here--></td>
+		<td><li><a href = "planets.html"> Git Hub Info </a></li></td>
 		<td><!--Put yo python project here--></td>
 		<td><!--Put yo whatever project here--></td>
 		<td><!--Put yo whatever project here--></td>
