--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<tr>
 	
 		<th><h3>HTML</h3></th>
-		<th><h3>Python</h3></th>
+		<th><h3>JavaScript</h3></th>
 		<th><h3>Other Code</h3></th>
 		<th><h3>Other Code</h3></th>
 	</tr>
