--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
 	</tr>
 	<tr>
 		<td><li><a href = "bagels.html"> Brownsville Bagels </a></li></td>
-		<td><!--Put yo python project here--></td>
+		<td><!--Put yo JS project here--></td>
 		<td><!--Put yo whatever project here--></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><li><a href = "githubinfo.html"> Git Hub Info </a></li></td>
-		<td><!--Put yo python project here--></td>
+		<td><!--Put yo JS here--></td>
 		<td><!--Put yo whatever project here--></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><li><a href = "planets.html"> Info on Solar System </a></li></td>
-		<td><!--Put yo python project here--></td>
+		<td><!--Put yo JS here--></td>
 		<td><!--Put yo whatever project here--></td>
 		<td><!--Put yo whatever project here--></td>
 		
