--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 					a {text-decoration:none;}
 					a link{color:#8030a0;}
-					a:visited{color:#8a5e8e;}
-					a:hover {color:#0dc514}
+					a:visited{color:#80148a;}
+					a:hover {color:#c50d4a}
 					a:active {color:#dd60f0;}
 
 
