--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 
 				
 				<tr>
-					<td align="center" ><a ref="index.html">Home</a></td>
-					<td align="center" ><a ref="https://www.pvcc.edu/">PVCC</a></td>
-					<td align="center" ><a ref="http://www.w3schools.com/html/">W3 Schools</a></td>
-					<td align="center" ><a ref="contactus.html">Contact Us</a></td>
+					<td align="center" ><a href="index.html">Home</a></td>
+					<td align="center" ><a href="https://www.pvcc.edu/">PVCC</a></td>
+					<td align="center" ><a href="http://www.w3schools.com/html/">W3 Schools</a></td>
+					<td align="center" ><a href="contactus.html">Contact Us</a></td>
 				
 
 
