--- a/opsys.html
+++ b/opsys.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 
 <html>
 
@@ -10,15 +10,16 @@
 		
 	<style>
 		
+		
 		tr:nth-child(odd) {
 			color:white;
 			Background-color: #000000;
-			h1 {color:white}
+			
 		
 			}
 	
 	
-			Table body {background-color:#ffffff;
+			body {background-image: url(blueskies.jpg);
 						font-family:'Times New Roman', Times, serif;
 						margin-top:0px;
 					}
@@ -27,16 +28,32 @@
 					ul {font-size: 1.5em; margin-left: 3em;};
 
 					a {text-decoration:none;}
-					a link{color:#8030a0;}
+					a:link{color:#0cf1f1;}
 					a:visited{color:#db1fec;}
 					a:hover {color:#df3970}
 					a:active {color:#dd60f0;}
 					
 
-					table {width:80%; font size:1.3em; font-weight:normal; background-color:#fff;}
+					table {width:70%; font size:1.3em; font-weight:normal; background-color:#fff;}
 
 					td{width:200px;}
 
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 	
 	
 	
@@ -45,6 +62,8 @@
 		
 		
 	<body>
+
+	
 
 		<table
 				
