--- a/opsys.html
+++ b/opsys.html
@@ -16,10 +16,12 @@
 			Background-color: #000000;
 			
 		
+		
 			}
 	
-	
-			body {background-image: url(blueskies.jpg);
+	<!--"Beautiful universe. Space blue background with Milky Way" by wuestenigel is licensed under CC BY 2.0.-->
+		
+		body {background-image: url(blueskies.jpg);
 						font-family:'Times New Roman', Times, serif;
 						margin-top:0px;
 					}
