--- a/opsys.html
+++ b/opsys.html
@@ -21,7 +21,8 @@
 	
 	
 		
-		body {background-image: url(blueskies.jpg);
+		body {
+						background-image: url('blueskies.jpg');
 						font-family:'Times New Roman', Times, serif;
 						margin-top:0px;
 					}
