--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
 	</tr>
 	<tr>
 		<td> <a href = "faves.html"> My Favorite Things </a></td>
-		<td>Coming Soon...</td>
+		<td><a href = "arithmetic.html"> JavaScript Calculator</a></td>
 		<td>Coming Soon...</td>
 		<td>Coming Soon...</td>
 	</tr>
 	<tr>
 		<td><a href = "bagels.html"> Brownsville Bagels </a></td>
-		<td><a href = "arithmetic.html"> JavaScript Calculator</a></td>
+		<td>><!--Put yo JS here--></td>
 		<td><!--Put yo whatever project here--></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
