--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	</tr>
 	<tr>
 		<td><a href = "bagels.html"> Brownsville Bagels </a></td>
-		<td><!--Put yo JS here--></td>
+		<td><a href = "buses.html"> Brownsville Bagels </a></td>
 		<td><!--Put yo whatever project here--></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
