--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	</tr>
 	<tr>
 		<td> <a href = "faves.html"> My Favorite Things </a></td>
-		<td><a href = "arithmetic.html"> JavaScript Calculator</a></td>
+		<td><a href = "arithmetic.html"> Arithmetic</a></td>
 		<td>Coming Soon...</td>
 		<td>Coming Soon...</td>
 	</tr>
