--- a/index.html
+++ b/index.html
@@ -111,7 +111,12 @@
 		<td><!--Put yo whatever project here--></td>
 		<td><!--Put yo whatever project here--></td>
 		<tr></tr>
-		<td><a href = "opsys.html"> Operating Systems Terms </a></td>
+	<td><a href = "opsys.html"> Operating Systems Terms </a></td>
+		<td><!--Put yo JS here--></td>
+		<td><!--Put yo whatever project here--></td>
+		<td><!--Put yo whatever project here--></td>
+	<tr></tr>
+		<td><a href = "network.html"> Networking Terms </a></td>
 		<td><!--Put yo JS here--></td>
 		<td><!--Put yo whatever project here--></td>
 		<td><!--Put yo whatever project here--></td>
