--- a/network.html
+++ b/network.html
@@ -135,11 +135,11 @@
 
 				
 				<tr>
-					<td align: center;><a href="index.html">Home</a></td>
-					<td align: center;><a href="https://www.pvcc.edu/">PVCC</a></td>
-					<td align: center;>
+					<td style="text-align:center"><a href="index.html">Home</a></td>
+					<td style="text-align:center"><a href="https://www.pvcc.edu/">PVCC</a></td>
+					<td style="text-align:center">
 						<a href="http://www.w3schools.com/html/">W3 Schools</a></td>
-					<td align: center; ><a href="contactus.html">Contact Us</a></td>
+					<td style="text-align:center" ><a href="contactus.html">Contact Us</a></td>
 				</tr>
             
         </div>
