--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
 	
 		<th><h3>HTML</h3></th>
 		<th><h3>JavaScript</h3></th>
-		<th><h3>Other Code</h3></th>
+		<th><h3>Python</h3></th>
 		<th><h3>Other Code</h3></th>
 	</tr>
 	<tr>
 		<td> <a href = "faves.html"> My Favorite Things </a></td>
 		<td><a href = "arithmetic.html"> Arithmetic</a></td>
-		<td>Coming Soon...</td>
+		<td><a href = "tickets.py"> Tickets</a></td>
 		<td>Coming Soon...</td>
 	</tr>
 	<tr>
