--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 	<tr>
 		<td><a href = "bagels.html"> Brownsville Bagels </a></td>
 		<td><a href = "buses.html"> How Many Buses? </a></td>
-		<td><!--Put yo whatever project here--></td>
+		<td><a href = "tuition.py"> PVCC Tuition Calculator</a></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><a href = "githubinfo.html"> Git Hub Info </a></td>
