--- a/index.html
+++ b/index.html
@@ -103,22 +103,22 @@
 	<tr></tr>
 		<td><a href = "githubinfo.html"> Git Hub Info </a></td>
 		<td><!--Put yo JS here--></td>
-		<td><!--Put yo whatever project here--></td>
+		<td><!--Put yo python project here--></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><a href = "planets.html"> Info on Solar System </a></td>
 		<td><!--Put yo JS here--></td>
-		<td><!--Put yo whatever project here--></td>
+		<td><!--Put yo python project here--></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><a href = "opsys.html"> Operating Systems Terms </a></td>
 		<td><!--Put yo JS here--></td>
-		<td><!--Put yo whatever project here--></td>
+		<td><!--Put yo python project here--></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><a href = "network.html"> Networking Terms </a></td>
 		<td><!--Put yo JS here--></td>
-		<td><!--Put yo whatever project here--></td>
+		<td><!--Put yo python project here--></td>
 		<td><!--Put yo whatever project here--></td>
 		
 		
