--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 	<tr></tr>
 		<td><a href = "githubinfo.html"> Git Hub Info </a></td>
 		<td><!--Put yo JS here--></td>
-		<td><!--Put yo python project here--></td>
+		<td><a href = "topic.py"> Random C.E. Project Number Generator</a></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><a href = "planets.html"> Info on Solar System </a></td>
