--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	<tr></tr>
 		<td><a href = "opsys.html"> Operating Systems Terms </a></td>
 		<td><!--Put yo JS here--></td>
-		<td><!--Put yo python project here--></td>
+		<td><a href = "dogs.py"> Dog Names</a></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><a href = "network.html"> Networking Terms </a></td>
