--- a/index.html
+++ b/index.html
@@ -120,7 +120,11 @@
 		<td><!--Put yo JS here--></td>
 		<td><!--Put yo python project here--></td>
 		<td><!--Put yo whatever project here--></td>
-		
+	<tr></tr>
+		<td><a href = "programming.html"> Programming Terms </a></td>
+		<td><!--Put yo JS here--></td>
+		<td><!--Put yo python project here--></td>
+		<td><!--Put yo whatever project here--></td>
 		
 		
 		
