--- a/knipp-CE-Project/main.html
+++ b/knipp-CE-Project/main.html
@@ -100,9 +100,9 @@
     
     <tr>
         <td align="center" ><a href="index.html">Home</a></td>
-        <td align="center" ><a href="https://www.pvcc.edu/">PVCC</a></td>
-        <td align="center" ><a href="http://www.w3schools.com/html/">W3 Schools</a></td>
-        <td align="center" ><a href="contactus.html">Contact Us</a></td>
+        <td align="center" ><a href="main.html">C.E. Project Main</a></td>
+        <td align="center" ><a href="sources.html">Sources</a></td>
+        <td align="center" ><a href="quiz.html">Quiz</a></td>
     
 
 
