--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 				align="center" 
 				border="1"
 				cellpadding="5"
+				width="100%"
 				
 
 				
@@ -87,44 +88,40 @@
 		<th><h3>HTML</h3></th>
 		<th><h3>JavaScript</h3></th>
 		<th><h3>Python</h3></th>
-		<th><h3>Other Code</h3></th>
+		<th><h3>C.E Project</h3></th>
 	</tr>
 	<tr>
 		<td> <a href = "faves.html"> My Favorite Things </a></td>
 		<td><a href = "arithmetic.html"> Arithmetic</a></td>
 		<td><a href = "tickets.py"> Tickets</a></td>
-		<td>Coming Soon...</td>
+		<td><a href = "knipp-CE-Project/main.html"> Obergefell v. Hodges</a></td>
 	</tr>
 	<tr>
 		<td><a href = "bagels.html"> Brownsville Bagels </a></td>
 		<td><a href = "buses.html"> How Many Buses? </a></td>
-		<td><a href = "tuition.py"> PVCC Tuition Calculator</a></td>
+		<td><!--Put yo whatever project here--></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><a href = "githubinfo.html"> Git Hub Info </a></td>
 		<td><!--Put yo JS here--></td>
-		<td><a href = "topic.py"> Random C.E. Project Number Generator</a></td>
+		<td><!--Put yo whatever project here--></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><a href = "planets.html"> Info on Solar System </a></td>
 		<td><!--Put yo JS here--></td>
-		<td><!--Put yo python project here--></td>
+		<td><!--Put yo whatever project here--></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><a href = "opsys.html"> Operating Systems Terms </a></td>
 		<td><!--Put yo JS here--></td>
-		<td><a href = "dogs.py"> Dog Names</a></td>
+		<td><!--Put yo whatever project here--></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><a href = "network.html"> Networking Terms </a></td>
 		<td><!--Put yo JS here--></td>
-		<td><!--Put yo python project here--></td>
 		<td><!--Put yo whatever project here--></td>
-	<tr></tr>
-		<td><a href = "programming.html"> Programming Terms </a></td>
-		<td><!--Put yo JS here--></td>
-		<td><!--Put yo python project here--></td>
 		<td><!--Put yo whatever project here--></td>
+		
 		
 		
 		
