--- a/index.html
+++ b/index.html
@@ -99,29 +99,29 @@
 	<tr>
 		<td><a href = "bagels.html"> Brownsville Bagels </a></td>
 		<td><a href = "buses.html"> How Many Buses? </a></td>
-		<td><!--Put yo whatever project here--></td>
+		<td><a href = "tuition.py"> Tuition Calculator</a></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><a href = "githubinfo.html"> Git Hub Info </a></td>
 		<td><!--Put yo JS here--></td>
-		<td><!--Put yo whatever project here--></td>
+		<td><a href = "dogs.py"> Dogs</a></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><a href = "planets.html"> Info on Solar System </a></td>
 		<td><!--Put yo JS here--></td>
-		<td><!--Put yo whatever project here--></td>
+		<td><a href = "magic8.py"> Magic 8 Ball</a></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><a href = "opsys.html"> Operating Systems Terms </a></td>
 		<td><!--Put yo JS here--></td>
-		<td><!--Put yo whatever project here--></td>
+		<td><a href = "topic.py"> Random Number Generator</a></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><a href = "network.html"> Networking Terms </a></td>
 		<td><!--Put yo JS here--></td>
+		<td><!--Put yo Python project here--></td>
 		<td><!--Put yo whatever project here--></td>
-		<td><!--Put yo whatever project here--></td>
-		
+
 		
 		
 		
