--- a/knipp-CE-Project/main.html
+++ b/knipp-CE-Project/main.html
@@ -115,7 +115,7 @@
 
 
 
-    <center><iframe width="1060" height="600" src="https://www.youtube.com/embed/XJKyQn-Cmaw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+    <center><iframe width="900" height="600" src="https://www.youtube.com/embed/XJKyQn-Cmaw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
                                 
 
 
@@ -151,10 +151,23 @@
 
 They ruled there are no differences between a same-sex union and an opposite-sex union with respect to these principles, the exclusion of same-sex couples from the right to marry violates the Due Process Clause of the Fourteenth Amendment.
 
+Sources: "Obergefell v. Hodges." Oyez, www.oyez.org/cases/2014/14-556. Accessed 8 Nov. 2022.
 </div>
 
-    
 </p>
+
+<div class="links">
+    <h3>References Considered During This Case</h3>
+    <ul>
+        <li><a href="https://www.oyez.org/cases/1995/94-1039">Romer V. Evans (1996)</a> - The court found that a state can not openly deny protected status to individuals based on thier sexual orientation. </li>
+        <li><a href="https://www.oyez.org/cases/2002/02-102">Lawerence V. Texas (2003)</a> - The court found that tintercourse between same-sex adults</li>
+        <li><a href="https://www.oyez.org/cases/1966/395">Loving V. Virginia (1967)</a> - The court struck down a law preventing memebers from the opposite race from marrying.</li>
+        <li><a href="https://www.oyez.org/cases/2012/12-307">U.S. V. Windsor (2013)</a> - The court ruled that the government can not restrict the definition of marriage to one man and one woman.</li>
+    </ul>    
+
+</div>    
+
+
 
 
 
