--- a/knipp-CE-Project/main.html
+++ b/knipp-CE-Project/main.html
@@ -99,7 +99,7 @@
 
     
     <tr>
-        <td align="center" ><a href="index.html">Home</a></td>
+        <td align="center" ><a href="https://sknipp-pvcc.github.io/">Home</a></td>
         <td align="center" ><a href="main.html">C.E. Project Main</a></td>
         <td align="center" ><a href="sources.html">Sources</a></td>
         <td align="center" ><a href="quiz.html">Quiz</a></td>
@@ -148,13 +148,16 @@
     </ol>
 
 <div class="D">
+    <p>
 
 They ruled there are no differences between a same-sex union and an opposite-sex union with respect to these principles, the exclusion of same-sex couples from the right to marry violates the Due Process Clause of the Fourteenth Amendment.
-
+<br>
+<br>
 Sources: "Obergefell v. Hodges." Oyez, www.oyez.org/cases/2014/14-556. Accessed 8 Nov. 2022.
+    </p>
 </div>
 
-</p>
+
 
 <div class="links">
     <h3>References Considered During This Case</h3>
