--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 	<tr></tr>
 		<td><a href = "network.html"> Networking Terms </a></td>
 		<td><!--Put yo JS here--></td>
-		<td><!--Put yo Python project here--></td>
+		<td><a href = "pizza.py"> Pizza</a></td>
 		<td><!--Put yo whatever project here--></td>
 
 		
