--- a/index.html
+++ b/index.html
@@ -121,7 +121,11 @@
 		<td><!--Put yo JS here--></td>
 		<td><a href = "pizza.py"> Pizza</a></td>
 		<td><!--Put yo whatever project here--></td>
-
+	<tr></tr>
+		<td><!--Put yo JS here--></td>
+		<td><!--Put yo JS here--></td>
+		<td><a href = "payroll.py"> Pizza</a></td>
+		<td><!--Put yo whatever project here--></td>
 		
 		
 		
