--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	<tr></tr>
 		<td><!--Put yo JS here--></td>
 		<td><!--Put yo JS here--></td>
-		<td><a href = "payroll.py"> Pizza</a></td>
+		<td><a href = "payroll.py"> Fresh Foods Employee Weekly Pay</a></td>
 		<td><!--Put yo whatever project here--></td>
 		
 		
