--- a/index.html
+++ b/index.html
@@ -126,6 +126,11 @@
 		<td><!--Put yo JS here--></td>
 		<td><a href = "payroll.py"> Fresh Foods Employee Weekly Pay</a></td>
 		<td><!--Put yo whatever project here--></td>
+	<tr></tr>
+		<td><!--Put yo JS here--></td>
+		<td><!--Put yo JS here--></td>
+		<td><a href = "grades.py">CSC 230 Grade Report</a></td>
+		<td><!--Put yo whatever project here--></td>
 		
 		
 		
