--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
 		<td><!--Put yo JS here--></td>
 		<td><a href = "grades.py">CSC 230 Grade Report</a></td>
 		<td><!--Put yo whatever project here--></td>
+	<tr></tr>
+		<td><!--Put yo JS here--></td>
+		<td><!--Put yo JS here--></td>
+		<td><a href = "grades_files.py">CSC 230 Grade Report Version 3</a></td>
+		<td><!--Put yo whatever project here--></td>
 		
 		
 		
