--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 	<tr></tr>
 		<td><!--Put yo JS here--></td>
 		<td><!--Put yo JS here--></td>
-		<td><a href = "grades_files.py">CSC 230 Grade Report Version 3</a></td>
+		<td><a href = "grades_files.py">CSC 230 Grade Report Version Three</a></td>
 		<td><!--Put yo whatever project here--></td>
 		
 		
