--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
 	<tr></tr>
 		<td><!--Put yo JS here--></td>
 		<td><!--Put yo JS here--></td>
-		<td><a href = "grades.py">CSC 230 Grade Report</a></td>
+		<td><a href = "grades.py">CSC 230 Grade Report Version 2</a></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
 		<td><!--Put yo JS here--></td>
 		<td><!--Put yo JS here--></td>
-		<td><a href = "grades_files.py">CSC 230 Grade Report Version Three</a></td>
+		<td><a href = "grades_file.py">CSC 230 Grade Report Version 3</a></td>
 		<td><!--Put yo whatever project here--></td>
 		
 		
