--- a/index.html
+++ b/index.html
@@ -112,27 +112,32 @@
 		<td><a href = "magic8.py"> Magic 8 Ball</a></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
-		<td><a href = "opsys.html"> Operating Systems Terms </a></td>
+		<td><a href = "opsys.html"> Chapter 3 Terms: Operating Systems </a></td>
 		<td><!--Put yo JS here--></td>
 		<td><a href = "topic.py"> Random Number Generator</a></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
-		<td><a href = "network.html"> Networking Terms </a></td>
+		<td><a href = "network.html"> Chapter 4 Terms: Networking </a></td>
 		<td><!--Put yo JS here--></td>
 		<td><a href = "pizza.py"> Pizza</a></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
-		<td><!--Put yo JS here--></td>
+		<td><a href = "programming.html">Chapter 5 Terms: Programming</a></td>
 		<td><!--Put yo JS here--></td>
 		<td><a href = "payroll.py"> Fresh Foods Employee Weekly Pay</a></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
-		<td><!--Put yo JS here--></td>
+		<td><a href = "proglang.html">Chapter 6 Terms: Programming Languages Coming Soon!</a></td>
 		<td><!--Put yo JS here--></td>
 		<td><a href = "grades.py">CSC 230 Grade Report Version 2</a></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
+		<td><a href = "software-eng.html">Chapter 7 Terms: Software Engineering Coming Soon!</a></td>
 		<td><!--Put yo JS here--></td>
+		<td><a href = "grades_file.py">CSC 230 Grade Report Version 3</a></td>
+		<td><!--Put yo whatever project here--></td>
+	<tr></tr>
+		<td></td>
 		<td><!--Put yo JS here--></td>
 		<td><a href = "grades_file.py">CSC 230 Grade Report Version 3</a></td>
 		<td><!--Put yo whatever project here--></td>
