--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 		<td><a href = "payroll.py"> Fresh Foods Employee Weekly Pay</a></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
-		<td><a href = "proglang.html">Chapter 6 Terms: Programming Languages Coming Soon!</a></td>
+		<td><a href = "proglang.html">Chapter 6 Terms: Programming Languages</a></td>
 		<td><!--Put yo JS here--></td>
 		<td><a href = "grades.py">CSC 230 Grade Report Version 2</a></td>
 		<td><!--Put yo whatever project here--></td>
