--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		<th><h3>HTML</h3></th>
 		<th><h3>JavaScript</h3></th>
 		<th><h3>Python</h3></th>
-		<th><h3>C.E Project</h3></th>
+		<th><h3>Special Projects</h3></th>
 	</tr>
 	<tr>
 		<td> <a href = "faves.html"> My Favorite Things </a></td>
@@ -100,7 +100,7 @@
 		<td><a href = "bagels.html"> Brownsville Bagels </a></td>
 		<td><a href = "buses.html"> How Many Buses? </a></td>
 		<td><a href = "tuition.py"> Tuition Calculator</a></td>
-		<td><!--Put yo whatever project here--></td>
+		<td><a href = "pordle.py"> Pordle!</a></td>
 	<tr></tr>
 		<td><a href = "githubinfo.html"> Git Hub Info </a></td>
 		<td><!--Put yo JS here--></td>
