--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 		<td><a href = "grades.py">CSC 230 Grade Report Version 2</a></td>
 		<td><!--Put yo whatever project here--></td>
 	<tr></tr>
-		<td><a href = "software-eng.html">Chapter 7 Terms: Software Engineering Coming Soon!</a></td>
+		<td><a href = "software-eng.html">Chapter 7 Terms: Software Engineering</a></td>
 		<td><!--Put yo JS here--></td>
 		<td><a href = "grades_file.py">CSC 230 Grade Report Version 3</a></td>
 		<td><!--Put yo whatever project here--></td>
