--- a/index.html
+++ b/index.html
@@ -227,8 +227,10 @@
 
 		<tr>
 			<td>Week 1</td>
-			<td><a href = "PythonWeek1.py">Questions</a></td>
-			
+			<td>
+				<ul>
+					<li><a href = "PythonWeek1.py">Questions</a></td></li>
+				</ul>
 		</tr>
 		<tr>
 			<td>Week 2</td>
