--- a/index.html
+++ b/index.html
@@ -299,18 +299,20 @@
 							</ul>
 						</td>
 					</tr>
-				<td>Week 7</td>
+				<td>Week 7
+			
+				</td>
 				<td>
 					<ul>
-						<li><a href = "Week 8 Ex 1- Function to Count Odd Numbers in List.py">Function To Count Odd Numbers in a list</a></li>
-						<li><a href = "Week 8 Ex 2- Sum all Even Numbers in List.py">Sum all even numbers in a list</a></li>
-						<li><a href = "Week 8 Ex 3- Sum all negative numbers in list.py">Sum all negative numbers in a list</a></li>
-						<li><a href = "Week 8 Ex 4- Count How many words in a list by letter number.py">Count how many words are in a list by letter number</a></li>
-						<li><a href = "Week 8 Ex 5- Sum all the elements in a list up to but not including the first even number. .py">Sum all elements in a list up to a certain word</a></li>
-						<li><a href = "Week 8 Ex 6- Count words in list until certain word.py">Count words in a list until certain word</a></li>
-						<li><a href = "Week 8 Ex 14- Num Digits.py">Numbers/ Digits</a></li>
-						<li><a href = "Week 8 Ex 15- NumDigits 2.py">Numbers/ Digits 2</a></li>
-						<li><a href = "Week 8 Ex 16- sum of square roots.py">Sum of Square Roots</a></li>
+						<li><a href = "Week 7 Ex 1- Function to Count Odd Numbers in List.py">Function To Count Odd Numbers in a list</a></li>
+						<li><a href = "Week 7 Ex 2- Sum all Even Numbers in List.py">Sum all even numbers in a list</a></li>
+						<li><a href = "Week 7 Ex 3- Sum all negative numbers in list.py">Sum all negative numbers in a list</a></li>
+						<li><a href = "Week 7 Ex 4- Count How many words in a list by letter number.py">Count how many words are in a list by letter number</a></li>
+						<li><a href = "Week 7 Ex 5- Sum all the elements in a list up to but not including the first even number. .py">Sum all elements in a list up to a certain word</a></li>
+						<li><a href = "Week 7 Ex 6- Count words in list until certain word.py">Count words in a list until certain word</a></li>
+						<li><a href = "Week 7 Ex 14- Num Digits.py">Numbers/ Digits</a></li>
+						<li><a href = "Week 7 Ex 15- NumDigits 2.py">Numbers/ Digits 2</a></li>
+						<li><a href = "Week 7 Ex 16- sum of square roots.py">Sum of Square Roots</a></li>
 					</ul>
 				</td>
 			</tr>
