--- a/artistry.html
+++ b/artistry.html
@@ -64,7 +64,7 @@
       left: 0;
       width: 100vw;
       height: 100vh;
-      background: rgba(4, 4, 4, 0.8); /* Semi-transparent black */
+      background: rgba(0, 0, 0, 0.8); /* Semi-transparent black */
       align-items: center;
       justify-content: center;
       z-index: 1000;
@@ -80,14 +80,14 @@
 <body>
   <header>
     <!-- Editable Header Text -->
-    <p>Art Projects (Coming Soon!)</p>
+    <p>Welcome to the Artistry Gallery</p>
   </header>
 
   <div class="gallery">
     <!-- Gallery Item 1 -->
     <div class="gallery-item">
-      <img src="https://raw.githubusercontent.com/sarahknipp/art-gallery/main/images/apoth.jpg" alt="apoth" onclick="openLightbox(this.src)" />
-      <div class="caption">Apothecary • Acrylic on Masonite • 2016</div>
+      <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/apoth.jpg" alt="Apothecary Painting" onclick="openLightbox(this.src)" />
+      <div class="caption">Apothecary Painting • Mixed Media • 2024</div>
     </div>
 
     <!-- Gallery Item 2 -->
@@ -121,4 +121,3 @@
   </script>
 </body>
 </html>
-
