--- a/artistry.html
+++ b/artistry.html
@@ -87,13 +87,14 @@
     <!-- Gallery Item 1 -->
     <div class="gallery-item">
       <img src="https://raw.githubusercontent.com/sknipp-pvcc/sknipp-pvcc.github.io/main/apoth.jpg" alt="Apothecary Painting" onclick="openLightbox(this.src)" />
+
       <div class="caption">Apothecary Painting • Mixed Media • 2024</div>
     </div>
 
     <!-- Gallery Item 2 -->
     <div class="gallery-item">
       <img src="https://raw.githubusercontent.com/sarahknipp/art-gallery/main/images/abstract-blues.jpg" alt="Abstract Blues" onclick="openLightbox(this.src)" />
-      <div class="caption">Abstract Blues • Acrylic • 2022</div>
+      <div class="caption">ABlues • Acrylic • 2022</div>
     </div>
 
     <!-- Gallery Item 3 -->
